# Capstone_Vision

./: .gitignore  READ.me  README.md  capstone.py  data.yaml  howtorun.md  risk_db.py  test_image.py  train.py  val_model.py  vision_midterm_report.md  vision_ros2_node.py  vision_team_tasks.md  vision_team_tasks.txt
reports/validation/: lego_confidence_threshold_plan.md  validation_report.json  validation_report.md
robot_ws/: .gitignore
robot_ws/src/robot_perception_msgs/: CMakeLists.txt  package.xml
robot_ws/src/robot_perception_msgs/msg/: Detection.msg  DetectionArray.msg
test/labels/: C1x1x1_mp4-0000_jpg.rf.2926092ad63929b7fb6a98e99b952a84.txt  C1x1x1_mp4-0013_jpg.rf.56008513a197ba22abbf29a8985471c8.txt  C1x1x1_mp4-0023_jpg.rf.ff11c384a9d7fb260069ddd9235b55b6.txt  C2x1x0_MP4-0004_jpg.rf.9d60222e03e050e7409cef6f23814be6.txt  C2x1x0_MP4-0018_jpg.rf.9900b1255a1022b1b24f8fdae13d16f1.txt  C2x1x1_MP4-0012_jpg.rf.1713322671c3fd64caadadccc3105919.txt  C2x1x1_MP4-0019_jpg.rf.6ac860bc103ee45068b8538fa82442a7.txt  C2x1x1_MP4-0022_jpg.rf.b4ec3622de1e8caff47bcad8b0919942.txt  C2x1x1_MP4-0025_jpg.rf.4ea30057c1bf08a37ecc4ea28146c2f3.txt  C2x2x0_mp4-0001_jpg.rf.4d8d51f318f3e5805ed5f3c3359809e5.txt  C2x2x0_mp4-0014_jpg.rf.515fe82f3928c25dde71f1353f41b775.txt  C2x2x0_mp4-0026_jpg.rf.0e7d7e60717ec29e4736319b00f3fde4.txt  C3x1x1_mp4-0013_jpg.rf.dce029f6456c7ad524f46222cbae81ad.txt  C3x2x0_MOV-0002_jpg.rf.ed44a4646a84147fcad047064ea29d6e.txt  C3x2x0_MOV-0014_jpg.rf.5686a20ded4012b871c254d06288eb72.txt  (+62 more)
train/: labels.cache
valid/: labels.cache
(+896 files in other folders)
